--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="apple-touch-icon" href="/icon.83aa3da3.png">
-  <link rel="icon" href="/favicon.ed851ed1.svg" type="image/x-icon">
-  <link rel="shortcut icon" href="/favicon.ed851ed1.svg" type="image/x-icon">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" href="favicon.svg" type="image/x-icon"/>
+  <link rel="shortcut icon" href="favicon.svg" type="image/x-icon"/>
 
-  <link rel="stylesheet" href="/normalize.1114379f.css">
-  <link rel="stylesheet" href="/main.c52e0fe2.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
-<script src="/normalize.1114379f.js"></script><script src="/main.c52e0fe2.js"></script></head>
+</head>
 
 <body>
   <div id="content">
     <div id="header">
-      <img id="header-icon" src="/nite_out_icon.37c3fcac.svg" alt="nite out banner">
-      <img id="header-banner" src="/nite_out_banner.7a29f54f.svg" alt="nite out banner">
+      <img id="header-icon" src="img/nite_out_icon.svg" alt="nite out banner">
+      <img id="header-banner" src="img/nite_out_banner.svg" alt="nite out banner">
     </div>
     <div id="footer">
       <div id="contact-us">
@@ -42,63 +42,31 @@
       <span id="contact-divider">
       |
       </span>
-      <a href="https://www.iubenda.com/privacy-policy/71093980" class="iubenda-nostyle iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy
+      <a href="https://www.iubenda.com/privacy-policy/71093980"
+        class="iubenda-nostyle iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy
         Policy</a>
-      <script>(function (w, d) {
-  var loader = function loader() {
-    var s = d.createElement("script"),
-        tag = d.getElementsByTagName("script")[0];
-    s.src = "https://cdn.iubenda.com/iubenda.js";
-    tag.parentNode.insertBefore(s, tag);
-  };
-
-  if (w.addEventListener) {
-    w.addEventListener("load", loader, false);
-  } else if (w.attachEvent) {
-    w.attachEvent("onload", loader);
-  } else {
-    w.onload = loader;
-  }
-})(window, document);</script>
+      <script
+        type="text/javascript">(function (w, d) { var loader = function () { var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s, tag); }; if (w.addEventListener) { w.addEventListener("load", loader, false); } else if (w.attachEvent) { w.attachEvent("onload", loader); } else { w.onload = loader; } })(window, document);</script>
       |
-      <a href="https://www.iubenda.com/terms-and-conditions/71093980" class="iubenda-nostyle iubenda-noiframe iubenda-embed iubenda-noiframe " title="Terms and Conditions ">Terms and
+      <a href="https://www.iubenda.com/terms-and-conditions/71093980"
+        class="iubenda-nostyle iubenda-noiframe iubenda-embed iubenda-noiframe " title="Terms and Conditions ">Terms and
         Conditions</a>
-      <script>(function (w, d) {
-  var loader = function loader() {
-    var s = d.createElement("script"),
-        tag = d.getElementsByTagName("script")[0];
-    s.src = "https://cdn.iubenda.com/iubenda.js";
-    tag.parentNode.insertBefore(s, tag);
-  };
-
-  if (w.addEventListener) {
-    w.addEventListener("load", loader, false);
-  } else if (w.attachEvent) {
-    w.attachEvent("onload", loader);
-  } else {
-    w.onload = loader;
-  }
-})(window, document);</script>
+      <script
+        type="text/javascript">(function (w, d) { var loader = function () { var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s, tag); }; if (w.addEventListener) { w.addEventListener("load", loader, false); } else if (w.attachEvent) { w.attachEvent("onload", loader); } else { w.onload = loader; } })(window, document);</script>
     </div>
   </div>
 
   <!-- Add your site or application content here -->
-  <script src="/modernizr-3.11.2.min.659b9f56.js"></script>
-  <script src="/plugins.7f97feee.js"></script>
-  <script src="/main.fb6bbcaf.js"></script>
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>window.ga = function () {
-  ga.q.push(arguments);
-};
-
-ga.q = [];
-ga.l = +new Date();
-ga('create', 'UA-XXXXX-Y', 'auto');
-ga('set', 'anonymizeIp', true);
-ga('set', 'transport', 'beacon');
-ga('send', 'pageview');</script>
-  <script src="https://www.google-analytics.com/analytics.js" async=""></script>
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
