update terms and privacy

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <link rel="icon" href="favicon.svg" type="image/x-icon"/>
-  <link rel="shortcut icon" href="favicon.svg" type="image/x-icon"/>
+  <link rel="icon" href="favicon.svg" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -40,16 +40,13 @@
         <a href="mailto: team@niteout.co">team@niteout.co</a>
       </div>
       <span id="contact-divider">
-      |
+        |
       </span>
-      <a href="https://www.iubenda.com/privacy-policy/71093980"
-        class="iubenda-nostyle iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy
-        Policy</a>
+      <a href="/privacy.html" title="Privacy Policy">Privacy Policy</a>
       <script
         type="text/javascript">(function (w, d) { var loader = function () { var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s, tag); }; if (w.addEventListener) { w.addEventListener("load", loader, false); } else if (w.attachEvent) { w.attachEvent("onload", loader); } else { w.onload = loader; } })(window, document);</script>
       |
-      <a href="https://www.iubenda.com/terms-and-conditions/71093980"
-        class="iubenda-nostyle iubenda-noiframe iubenda-embed iubenda-noiframe " title="Terms and Conditions ">Terms and
+      <a href="/terms.html" title="Terms and Conditions">Terms and
         Conditions</a>
       <script
         type="text/javascript">(function (w, d) { var loader = function () { var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s, tag); }; if (w.addEventListener) { w.addEventListener("load", loader, false); } else if (w.attachEvent) { w.attachEvent("onload", loader); } else { w.onload = loader; } })(window, document);</script>
