--- a/privacy.html
+++ b/privacy.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-  <img id="header-icon" src="img/nite_out_icon.svg" alt="niteout banner">
+  <img id="header-icon" src="img/nite_out_icon_transparent.svg" alt="niteout banner">
   <a href="https://www.iubenda.com/privacy-policy/71093980" class="iubenda-nostyle iubenda-noiframe iubenda-embed iubenda-noiframe iub-body-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
 
   <!-- Add your site or application content here -->
